fixing responcive issue with elements being too large on mobile

--- a/blastoff.scss
+++ b/blastoff.scss
@@ -88,6 +88,7 @@ html {
   font-weight: light;
   min-height: 100%;
   height: 100%;
+  width: 100%;
 }
 h1 {
   font-size: 2em;
@@ -215,6 +216,7 @@ a.nolink:hover {
 body {
   padding: 0px;
   min-height: 100%;
+  width: 100%;
   margin: 0px;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -224,6 +226,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   word-wrap: break-word;
+  overflow-x: hidden;
 }
 
 hr {
